--- a/_layouts/nl_default.html
+++ b/_layouts/nl_default.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
     <!-- thanks to https://favicon.io/ -->
-    <link rel="stylesheet" href='css/codemirror.css'>
-    <link rel="stylesheet" href='css/neat.css'>
+    <link rel="stylesheet" href='/css/codemirror.css'>
+    <link rel="stylesheet" href='/css/neat.css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Roboto:700,500,300|Roboto+Condensed">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <script src="https://unpkg.com/@webcomponents/custom-elements@1.2.0/custom-elements.min.js"></script>
-    <script src="scripts/codemirror.js"></script>
-    <script src="scripts/codemirrorsql.js"></script>
-    <script src="scripts/autorefresh.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="/scripts/codemirror.js"></script>
+    <script src="/scripts/codemirrorsql.js"></script>
+    <script src="/scripts/autorefresh.js"></script>
+    <script src="/scripts/main.js"></script>
     <script>
-      window.onload = () => loadData('{{ page.dbFile }}');
+      window.onload = () => loadData('../{{ page.dbFile }}');
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46601509-2"></script>
@@ -28,11 +28,11 @@
 
     <!-- add meta tag for translated version -->
     {% assign current_page = page.url | replace:'/','' | replace:'..','' %}
-    {% for hebrew_page in site.data.he_sitemap.contents %}
-      {% assign hebrew_page_source_url = hebrew_page.english_url | replace:'/','' | replace:'..','' %}
-      {% if current_page == hebrew_page_source_url %}
+    {% for dutch_page in site.data.nl_sitemap.contents %}
+      {% assign dutch_page_source_url = dutch_page.english_url | replace:'/','' | replace:'..','' %}
+      {% if current_page == dutch_page_source_url %}
     <link rel="alternate" hreflang="en" href="{{ page.url }}">
-    <link rel="alternate" hreflang="he" href="/he/{{ hebrew_page.url  }}">
+    <link rel="alternate" hreflang="nl" href="/nl/{{ dutch_page.url  }}">
       {% endif %}
     {% endfor %}
 
@@ -41,8 +41,8 @@
   <body>
     <div id="column">
       <div class="header">
-        <a href="/"><img class="logo" src="imgs/favicon-256.png"></a>
-        <a href="/"><div class="title">Select Star SQL</div></a>
+        <a href="/nl/"><img class="logo" src="/imgs/favicon-256.png"></a>
+        <a href="/nl/"><div class="title">Select Star SQL</div></a>
       </div>
       <div class="content">
         {{content}}
