--- a/css/rtl/rtl_main.css
+++ b/css/rtl/rtl_main.css
@@ -308,9 +308,9 @@ sql-exercise .CodeMirror {
 }
 
 sql-exercise .sqlExInputArea input {
+    color: black;
     margin-right: 1em;
     background: #f9f9f9;
-    border-radius: 4px;
     font-size: 0.8em;
     font-weight: 200;
     border: thin solid black;
