Modifying FR translation

--- a/_layouts/fr_default.html
+++ b/_layouts/fr_default.html
@@ -48,7 +48,7 @@
         {{content}}
       </div>
       <div class="footer">
-        La texte pour <a href="/">SelectStarSql.com</a> est publié par <a href="https://kaomorphism.com/">Zi Chong Kao</a> sous la licence <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-SA 4.0</a>. La  <a href="/he/">traduction en hébreu</a> est de <a href="https://thepitz.io/">Noam Castel</a>, la <a href="/nl/">traduction en néerlandais</a> est de Jowan Vogel, la <a href="/it/">traduction en italien</a> est de  Stefano Caglio, et la <a href="/fr/">traduction en français</a> est d'<a href='https://github.com/apriltaoyvr'>April Tao</a>. Le code et les données sont diffusés dans le domaine public sous la licence <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons CC0</a>.
+        La texte pour <a href="/">SelectStarSql.com</a> est publié par <a href="https://kaomorphism.com/">Zi Chong Kao</a> sous la licence <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-SA 4.0</a>. La  <a href="/he/">traduction en hébreu</a> est de <a href="https://thepitz.io/">Noam Castel</a>, la <a href="/nl/">traduction en néerlandais</a> est de Jowan Vogel, la <a href="/it/">traduction en italien</a> est de  Stefano Caglio, et la <a href="/fr/">traduction en français</a> est d'April Tao. Le code et les données sont diffusés dans le domaine public sous la licence <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons CC0</a>.
       </div>
     </div>
   </body>
