--- a/_layouts/es_tutorial.html
+++ b/_layouts/es_tutorial.html
@@ -1,16 +1,16 @@
 ---
-layout: default
+layout: es_default
 ---
 
-{% for tutorial in site.data.sitemap.contents %} {% if tutorial.title ==
+{% for tutorial in site.data.es_sitemap.contents %} {% if tutorial.title ==
 page.title %} {% assign tutorial_index = forloop.index0 %} {% assign
 content_length = forloop.length %} {% assign previous = tutorial_index | minus:
 1 %} {% assign next = tutorial_index | plus: 1 %} {% endif %} {% endfor %}
 
 <div class="section-nav">
-  <a href="/">Inicio</a>
+  <a href="/es/">Inicio</a>
   {% if previous >= 0 %} {% assign previous_tutorial =
-  site.data.sitemap.contents[previous] %}
+  site.data.es_sitemap.contents[previous] %}
   <div class="section-sib">
     &#x21b3;
     <a href="{{ previous_tutorial.url }}">{{ previous_tutorial.title }}</a>
@@ -22,15 +22,15 @@ content_length = forloop.length %} {% assign previous = tutorial_index | minus:
     <div class="cur-text">{{ page.title }}</div>
   </div>
 
-  {% for tutorial in site.data.sitemap.contents %} {% if tutorial.title ==
+  {% for tutorial in site.data.es_sitemap.contents %} {% if tutorial.title ==
   page.title %} {% for section in tutorial.sections %} {% unless
   section.sidenote %}
   <div class="childlinks">
     &#x21b3; <a href="{{ section.url }}">{{ section.name }}</a>
   </div>
   {% endunless %} {% endfor %} {% endif %} {% endfor %} {% if
-  site.data.sitemap.contents[next].title %} {% assign next_tutorial =
-  site.data.sitemap.contents[next] %}
+  site.data.es_sitemap.contents[next].title %} {% assign next_tutorial =
+  site.data.es_sitemap.contents[next] %}
   <div class="section-sib">
     &#x21b3; <a href="{{ next_tutorial.url }}">{{ next_tutorial.title }}</a>
   </div>
@@ -41,13 +41,13 @@ content_length = forloop.length %} {% assign previous = tutorial_index | minus:
 
 <div class="tutorial-nav">
   {% if previous >= 0 %} {% assign previous_tutorial =
-  site.data.sitemap.contents[previous] %}
+  site.data.es_sitemap.contents[previous] %}
   <div class="previous">
     Anterior:
     <a href="{{ previous_tutorial.url }}"> {{ previous_tutorial.title }}</a>
   </div>
-  {% endif %} {% if site.data.sitemap.contents[next].title %} {% assign
-  next_tutorial = site.data.sitemap.contents[next] %}
+  {% endif %} {% if site.data.es_sitemap.contents[next].title %} {% assign
+  next_tutorial = site.data.es_sitemap.contents[next] %}
   <div class="next">
     Siguiente: <a href="{{ next_tutorial.url }}"> {{ next_tutorial.title }}</a>
   </div>
